# tailor-image

./: Jenkinsfile  README.md  run_tailor_image.sh  setup.cfg  techstack.md  techstack.yml
config/: upstream.yaml
environment/: Dockerfile  create_base_image.bash
environment/devs/: Dockerfile
environment/image_recipes/ami/: ami.json
environment/image_recipes/bare_metal/: bare_metal.json
environment/image_recipes/bot/: bot.json
environment/image_recipes/dev/: dev.json
environment/image_recipes/docker/: Dockerfile  docker.json  entrypoint.sh
environment/image_recipes/lxd/: lxd.json
environment/image_recipes/test/: test.json
environment/playbooks/: ami.yaml  bare_metal.yaml  docker.yaml
environment/tests/: Dockerfile
tailor_image/: __init__.py  cleanup_images.py  create_image.py  s3_cleanup.py
