[metadata]
name = tailor-image
version = attr: tailor_image.__version__
url = http://tailor.locusbots.io
project_urls =
    GitHub = https://github.com/locusrobotics/tailor-image
author = Gary Servin
author_email = gservin@locusrobotics.com
maintainer = Gary Servin
maintainer_email = gservin@locusrobotics.com
license = Proprietary
description = Create images for tailor
long_description = file: README.md

[options]
python_requires = >=3.8
install_requires =
    awscli==1.27.134
    boto3 ==1.26.134
    Click ==8.1.3
    PyYaml ==5.4.1
packages =find:
setup_requires =
    boto3 ==1.26.134
    pytest-runner ==6.0.0
tests_require =
    pytest ==7.3.1
    pytest-mypy ==0.10.3
    pytest-flake8 ==1.1.1

[options.entry_points]
console_scripts =
    create_image = tailor_image.create_image:main

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --junitxml=test-results.xml --mypy --flake8
pep8maxlinelength = 120

[flake8]
max-line-length = 120
