[metadata]
name = tailor-image
version = attr: tailor_image.__version__
url = http://tailor.locusbots.io
project_urls =
    GitHub = https://github.com/locusrobotics/tailor-image
author = Gary Servin
author_email = gservin@locusrobotics.com
maintainer = Gary Servin
maintainer_email = gservin@locusrobotics.com
license = Proprietary
description = Create images for tailor
long_description = file: README.md

[options]
python_requires = >=3.10
install_requires =
    awscli==1.37.24
    boto3==1.36.24
    click==8.1.8
    PyYAML==6.0.1
packages =find:
setup_requires =
    boto3==1.36.24
    pytest-runner==6.0.1
tests_require =
    pytest==8.3.4
    pytest-flake8==1.3.0
    pytest-mypy==0.10.3

[options.entry_points]
console_scripts =
    create_image = tailor_image.create_image:main

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --junitxml=test-results.xml --mypy --flake8
pep8maxlinelength = 120

[flake8]
max-line-length = 120
